@@ -101,6 +101,12 @@ floating point numbers. This is important because many Hive file formats
 store floating point values as text. Change the path
 ``/var/presto/installation`` to match the Presto installation directory.
 
+.. note::
+
+    When using Java 8, remove the ``-XX:PermSize``, ``-XX:MaxPermSize`` and
+    ``-Xbootclasspath`` options. The ``PermSize`` options are not supported
+    and the floatingdecimal patch is only for Java 7.
+
 .. _config_properties:
 
 Config Properties
@@ -130,6 +136,18 @@ And this is a minimal configuration for the workers:
     coordinator=false
     http-server.http.port=8080
     task.max-memory=1GB
+    discovery.uri=http://example.net:8080
+
+Alternatively, if you are setting up a single machine for testing that
+will function as both a coordinator and worker, use this configuration:
+
+.. code-block:: none
+
+    coordinator=true
+    node-scheduler.include-coordinator=true
+    http-server.http.port=8080
+    task.max-memory=1GB
+    discovery-server.enabled=true
     discovery.uri=http://example.net:8080
 
 These properties require some explanation:
@@ -166,8 +184,7 @@ These properties require some explanation:
   on startup. In order to simplify deployment and avoid running an additional
   service, the Presto coordinator can run an embedded version of the
   Discovery service. It shares the HTTP server with Presto and thus uses
-  the same port. For larger clusters, we recommend running Discovery as a
-  dedicated service. See :doc:`discovery` for details.
+  the same port.
 
 * ``discovery.uri``:
   The URI to the Discovery server. Because we have enabled the embedded
@@ -187,11 +204,12 @@ For example, consider the following log levels file:
 
 .. code-block:: none
 
-    com.facebook.presto=DEBUG
+    com.facebook.presto=INFO
 
-This would set the minimum level to ``DEBUG`` for both
+This would set the minimum level to ``INFO`` for both
 ``com.facebook.presto.server`` and ``com.facebook.presto.hive``.
-The default minimum level is ``INFO``.
+The default minimum level is ``INFO``
+(thus the above example does not actually change anything).
 There are four levels: ``DEBUG``, ``INFO``, ``WARN`` and ``ERROR``.
 
 Catalog Properties
